--- a/six-base/pom.xml
+++ b/six-base/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.jpaw</groupId>
         <artifactId>jpaw-se-parent</artifactId>
-        <version>1.0.8-SNAPSHOT</version>
+        <version>1.0.8</version>
         <relativePath/>
     </parent>
 
@@ -20,35 +20,35 @@
             <dependency>
                 <groupId>de.jpaw</groupId>
                 <artifactId>jpaw-bom</artifactId>
-                <version>1.2.14-SNAPSHOT</version>
+                <version>1.2.14</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>de.jpaw</groupId>
                 <artifactId>jpaw8-bom</artifactId>
-                <version>1.1.6-SNAPSHOT</version>
+                <version>1.1.5</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>de.jpaw</groupId>
                 <artifactId>jdp-bom</artifactId>
-                <version>0.2.4-SNAPSHOT</version>
+                <version>0.2.4</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>de.jpaw</groupId>
                 <artifactId>bonaparte-bom</artifactId>
-                <version>3.7.0-SNAPSHOT</version>
+                <version>3.7.1</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
             <dependency>
                 <groupId>de.jpaw</groupId>
                 <artifactId>bonaparte8-bom</artifactId>
-                <version>1.2.1-SNAPSHOT</version>
+                <version>1.2.2</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -58,10 +58,10 @@
 
     <properties>
         <!-- define revisions of other jpaw.de projects, not covered by plugin management -->
-        <bonaparte-plugin.version>3.7.0-SNAPSHOT</bonaparte-plugin.version>
+        <bonaparte-plugin.version>3.7.1</bonaparte-plugin.version>
         <bonaparte-plugin-commons-lang.version>2.6</bonaparte-plugin-commons-lang.version>      <!-- currently needed by the plugins -->
         <vertx3.version>3.1.0</vertx3.version>
-        <aws.version>1.10.32</aws.version>
+        <aws.version>1.10.35</aws.version>
     </properties>
 
     <build>
